Bug 223477 - Maintenance tab in folder properties dialog not useful
Summary: Maintenance tab in folder properties dialog not useful
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 1.99.0
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-01-19 21:47 UTC by Thomas McGuire
Modified: 2010-12-10 13:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-01-19 21:47:46 UTC
In KMail 1, the tab displayed useful information, such as the path to the index file. These are no longer relevant in Akonadi, and therefore the tab lost most of its usefulness.
Also, the "location" field does not work currently.

Either the tab should be removed or populated with information related to the Akonadi collection.
Comment 1 Jonathan Marten 2010-01-20 10:22:46 UTC
The message stats (number of messages, unread messages) are still useful.  Also a count of deleted messages if this information is available.

Are the "compact folder" and "refresh IMAP cache" operations still available under Akonadi?
Comment 2 Thomas McGuire 2010-01-20 12:55:22 UTC
There are various cache settings for a folder, see http://api.kde.org/4.x-api/kdepimlibs-apidocs/akonadi/html/classAkonadi_1_1CachePolicy.html. I'm not sure if you can rebuild the cache at the moment, but it would certainly make sense to provide actions for that.
I also think controlling the indexing of the content by Nepomuk might be a useful option, or letting Nepomuk re-index the folder. Or provide some statistics about indexing.

So there is certainly enough stuff that can be added to this page again. Just right now the current state of the tab is not good.

About compacting: The option for this is in the mbox resource, it can be set to compact every x minutes. There is no way to control that from the outside yet, I think.
Comment 3 Antonis Tsiapaliokas 2010-11-18 13:31:57 UTC
Hello

I am new contributor to the kde and i want to help you... But i have some questions..  So for start we all agree that in the section "Files" in the maintenance the index and the location should be deleted... Right? If yes then what other feature do you want to add? Or this one is just ok for now? Also do you want to post my patch here or to create a new review in svn.reviewboard.kde.org?
Comment 4 Antonis Tsiapaliokas 2010-12-02 03:30:52 UTC
Hello again

I was ready to create a patch to fix this bug but i tried to reproduce for one last time... And this time i was not able to reproduce it, because the bug has been fixed... The only change is that now i am using the kde 4.5.81 instead of kde 4.5.80 and i tried to reproduce the bug with a new user... Here is some information about my system...

kde-devel@kokeroulis-desktop:~> kmail -v
Qt: 4.7.1
KDE Development Platform: 4.5.81 (4.6 >=20101125)
KMail: 2.0.89

So now the only thing that it has been left is to create a patch which will remove the "Location" field?
Comment 5 András Manţia 2010-12-10 13:10:11 UTC
SVN commit 1205195 by amantia:

Fix the rest of "Maintenance tab in folder properties dialog not useful" bug.
Patch by Antonis Tsiapaliokas

BUG: 223477


 M  +0 -6      collectionmaintenancepage.cpp  
 M  +0 -1      collectionmaintenancepage.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205195