Fix the rest of "Maintenance tab in folder properties dialog not useful" bug. Patch by Antonis Tsiapaliokas

BUG: 223477

svn path=/trunk/KDE/kdepim/kmail/; revision=1205195